--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,3 +32,67 @@ svg.star-svg {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
     box-shadow: 2px -1px 15px -5px rgba(184,184,184,1);
 }
+
+/* .triangle {
+    width: 50px;
+    height: 80px;
+    clip-path: polygon(48% 73%, 0% 100%, 100% 100%);
+    background-color: #333;
+ } */
+
+ [data-tooltip] {
+    position: relative;
+    cursor: pointer;
+  }
+  [data-tooltip]:before,
+  [data-tooltip]:after {
+    line-height: 1;
+    font-size: .9em;
+    pointer-events: none;
+    position: absolute;
+    display: none;
+    opacity: 0;
+  }
+  [data-tooltip]:before {
+    content: "";
+    border: 5px solid transparent;
+    z-index: 100;
+  }
+  [data-tooltip]:after {
+    content: attr(data-tooltip);
+    text-align: center;
+    min-width: 3em;
+    max-width: 21em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 15px 12px;
+    border-radius: 3px;
+    background: #4621FF;
+    color: #FFFFFF;
+    z-index: 99;
+  }
+  [data-tooltip]:hover:before,
+  [data-tooltip]:hover:after {
+    display: block;
+    opacity: 1;
+  }
+  
+  [data-tooltip][data-flow="bottom"]::before {
+    top: 100%;
+    border-top-width: 0;
+    border-bottom-color: #4621FF;
+  }
+  [data-tooltip][data-flow="bottom"]::after {
+    top: calc(100% + 5px);
+  }
+  [data-tooltip][data-flow="bottom"]::before, [data-tooltip][data-flow="bottom"]::after {
+    left: 40%;
+    -webkit-transform: translate(-50%, 8px);
+            transform: translate(-50%, 8px);
+  }
+
+  [data-tooltip=""]::after, [data-tooltip=""]::before {
+    display: none !important;
+  }
+  
